UAT_Backup_All_8Jan2024_0624/Backup-Source/objects/Vision_Bid_Simulator__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Vision_Bid_Simulators</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipName>Vision_Bid_Simulators</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipName>Vision_Bid_Simulators</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Vision_Additional_Rebate_Percent__c</fullName>
        <label>Additional Rebate Percent</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Vision_Admin_Fee__c</fullName>
        <label>Admin Fee</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Vision_Cash_Discount_Percent__c</fullName>
        <label>Cash Discount Percent</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Vision_Contract_Management_Fee_Percent__c</fullName>
        <label>Contract Management Fee Percent</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Vision_DRL_Deadnet_Per_Unit__c</fullName>
        <label>DRL Deadnet Per Unit</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Vision_DRL_Deadnet_per_unit_change__c</fullName>
        <label>Vision DRL Deadnet per unit change</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Vision_Deadnet_Sales_Change__c</fullName>
        <label>Deadnet Sales Change</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Vision_Deadnet_Sales__c</fullName>
        <label>Deadnet Sales</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Vision_Description__c</fullName>
        <label>Description</label>
        <length>131000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Vision_Indirect_Cash_Discount_Percent__c</fullName>
        <label>Vision Indirect Cash Discount Percent</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Vision_Order_Analytics_Fee_Percent__c</fullName>
        <label>Order Analytics Fee Percent</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Vision_Price_Per_Unit_Change__c</fullName>
        <label>Price Per Unit Change</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Vision_RDC_NLC_Percent__c</fullName>
        <label>RDC NLC Percent</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Vision_Rebate_Percent__c</fullName>
        <label>Rebate Percent</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Vision_Reference_Contracts__c</fullName>
        <label>Reference Contracts</label>
        <length>131000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Vision_Scenario_Type__c</fullName>
        <label>Scenario Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Proposed Price Fine Tuning</fullName>
                </value>
                <value>
                    <fullName>Customer Deadnet Refinment</fullName>
                </value>
                <value>
                    <fullName>TPT Cost Per pack Fine Tuning</fullName>
                </value>
                <value>
                    <fullName>DRL Deadnet Enhancement</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Vision_TPT_Cost_Per_Unit_Change__c</fullName>
        <label>TPT Cost Per Unit Change</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Vision_TPT_Cost_per_unit__c</fullName>
        <label>TPT Cost per unit</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Vision_TPT_Percent_Change__c</fullName>
        <label>TPT Percent Change</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Vision_VIP_Percent__c</fullName>
        <label>VIP Percent</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Vision_WAC__c</fullName>
        <label>WAC</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Vision_price_per_unit__c</fullName>
        <label>price per unit</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <label>Bid Simulator</label>
    <nameField>
        <label>Scenario Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Vision Bid Simulators</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>